Replace account to users
