# server/src/services/index.ts
@@ -1,1 +1,1 @@
-export * from './account'
+export * from './users'
